<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdministradorPassword">


    <Button
        android:id="@+id/btn_InicioAdmin"
        android:layout_width="315dp"
        android:layout_height="58dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="154dp"
        android:text="@string/btn_InicioAdmin" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="188dp"
        android:layout_height="168dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="56dp"
        app:srcCompat="@drawable/buslogo" />
    <EditText
        android:id="@+id/tv_admin"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_passwordAdmin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/tv_admin" />

    <EditText
        android:id="@+id/tv_passwordAdmin"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_InicioAdmin"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:hint="@string/tv_passwordAdmin" />



</RelativeLayout>