<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="254dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="74dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="83dp"
        android:layout_marginBottom="674dp"
        android:background="@color/colorAccent"
        android:text="INGRESE DATOS DEL CONDUCTOR"
        android:textSize="16dp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="166dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="600dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_nombreConductor"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="168dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="541dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_numBUs"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="169dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="469dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_cooperativa"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="166dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="390dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_Ruta"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="165dp"
        android:layout_height="43dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="323dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_horario"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="165dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="269dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_celular"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="163dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="205dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_email"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="169dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="227dp"
        android:layout_marginBottom="135dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/tv_passwordConductor"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp" />


    <EditText
        android:id="@+id/tv_numBUs"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_cooperativa"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_cooperativa"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="465dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_Ruta"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="392dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_horario"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="324dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_celular"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="260dp"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tv_email"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="201dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/tv_passwordConductor"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="131dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="54dp"
        android:text="@string/btn_registrar" />

    <EditText
        android:id="@+id/tv_nombreConductor"
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_numBUs"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="" />


</RelativeLayout>